--- a/bgcicca.cabal
+++ b/bgcicca.cabal
@@ -1,11 +1,11 @@
 name:               bgcicca
 version:            0.1.0.0
 build-type:         Simple
-cabal-version:      >= 1.10
+cabal-version:      >= 1.22  
 
 executable site
   main-is:          site.hs
-  build-depends:    base == 4.*
-                  , hakyll == 4.16.*
+  build-depends:    base >=4.14 && <4.20
+                  , hakyll >=4.16 && <4.17
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
